WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121687
[BlackBerry] Poor rendering opening a Google map short link
https://bugs.webkit.org/show_bug.cgi?id=121687
Summary
[BlackBerry] Poor rendering opening a Google map short link
Jacky Jiang
Reported
2013-09-20 08:43:51 PDT
JIRA:13854. Route lines going through the text on the page even if the google map and route line canvas are hidden.
Attachments
Patch
(2.69 KB, patch)
2013-09-20 09:07 PDT
,
Jacky Jiang
no flags
Details
Formatted Diff
Diff
Patch
(3.95 KB, patch)
2013-09-23 12:25 PDT
,
Jacky Jiang
yong.li.webkit
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jacky Jiang
Comment 1
2013-09-20 09:07:44 PDT
Created
attachment 212177
[details]
Patch
Yong Li
Comment 2
2013-09-20 09:10:06 PDT
Comment on
attachment 212177
[details]
Patch Overall comments
WebKit Commit Bot
Comment 3
2013-09-20 10:05:59 PDT
Comment on
attachment 212177
[details]
Patch Clearing flags on attachment: 212177 Committed
r156174
: <
http://trac.webkit.org/changeset/156174
>
WebKit Commit Bot
Comment 4
2013-09-20 10:06:01 PDT
All reviewed patches have been landed. Closing bug.
Jacky Jiang
Comment 5
2013-09-23 12:09:11 PDT
Reopen.
Jacky Jiang
Comment 6
2013-09-23 12:25:35 PDT
Created
attachment 212379
[details]
Patch
Yong Li
Comment 7
2013-09-23 12:40:25 PDT
Comment on
attachment 212379
[details]
Patch Overall comments
WebKit Commit Bot
Comment 8
2013-09-23 12:41:28 PDT
Comment on
attachment 212379
[details]
Patch Rejecting
attachment 212379
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-03', 'validate-changelog', '--check-oops', '--non-interactive', 212379, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: a/EWS/WebKit/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 73, in run_and_handle_errors self._run(tool, options, state) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 67, in _run step(tool, options).run(state) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 54, in run if changelog_entry.has_valid_reviewer(): AttributeError: 'NoneType' object has no attribute 'has_valid_reviewer' Full output:
http://webkit-queues.appspot.com/results/2004454
Jacky Jiang
Comment 9
2013-09-23 12:43:37 PDT
Comment on
attachment 212379
[details]
Patch "AttributeError: 'NoneType' object has no attribute 'has_valid_reviewer'" which looks has nothing to do with the patch, cq+ again.
WebKit Commit Bot
Comment 10
2013-09-23 12:45:02 PDT
Comment on
attachment 212379
[details]
Patch Rejecting
attachment 212379
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-02', 'validate-changelog', '--check-oops', '--non-interactive', 212379, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: a/EWS/WebKit/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 73, in run_and_handle_errors self._run(tool, options, state) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 67, in _run step(tool, options).run(state) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 54, in run if changelog_entry.has_valid_reviewer(): AttributeError: 'NoneType' object has no attribute 'has_valid_reviewer' Full output:
http://webkit-queues.appspot.com/results/1976075
Jacky Jiang
Comment 11
2013-09-23 12:53:44 PDT
(In reply to
comment #10
)
> (From update of
attachment 212379
[details]
) > Rejecting
attachment 212379
[details]
from commit-queue. > > Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-02', 'validate-changelog', '--check-oops', '--non-interactive', 212379, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit > > Last 500 characters of output: > a/EWS/WebKit/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 73, in run_and_handle_errors > self._run(tool, options, state) > File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 67, in _run > step(tool, options).run(state) > File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 54, in run > if changelog_entry.has_valid_reviewer(): > AttributeError: 'NoneType' object has no attribute 'has_valid_reviewer' > > Full output:
http://webkit-queues.appspot.com/results/1976075
This is weird, I will push manually myself anyway. Thanks Yong for the review.
Jacky Jiang
Comment 12
2013-09-23 13:23:46 PDT
Committed
r156288
: <
http://trac.webkit.org/changeset/156288
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug