[BlackBerry] Poor rendering opening a Google map short link https://bugs.webkit.org/show_bug.cgi?id=121687

Patch by Jacky Jiang <zhajiang@blackberry.com> on 2013-09-20
Reviewed by Yong Li.
Internally reviewed by Arvid Nilsson.

JIRA 495023
Route lines on google map were shown even they were on a hidden canvas.
Include visibility on LayerWebKitThread if it's a canvas layer and respect
the visibility when compositing layers in LayerRenderer.

* platform/graphics/blackberry/LayerData.h:
(WebCore::LayerData::isCanvasLayer):
(WebCore::LayerData::isVisible):
(WebCore::LayerData::includeVisibility):
* platform/graphics/blackberry/LayerRenderer.cpp:
(WebCore::LayerRenderer::compositeLayersRecursive):

Canonical link: https://commits.webkit.org/139689@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156174 268f45cc-cd09-0410-ab3c-d52691b4dbfc